@@ -3,6 +3,7 @@ use warnings;
 package MooseyParameterizedRole;
 
 use MooseX::Role::Parameterized;
+with 'MooseyRole';
 use Scalar::Util 'reftype';
 use namespace::clean;
 
@@ -12,6 +13,6 @@ role {
     1;
 };
 
-sub role_stuff {}
+sub parameterized_role_stuff {}
 
 1;
