@@ -1,6 +1,7 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+  - fixed method identification in Moose and Mouse roles
 
 0.07      2014-03-02 06:55:41Z
   - remove test prereqs that are meant to be optional (added in v0.06)
